@@ -1,6 +1,7 @@
 2015-09-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Verified compatibility with TYPO3 CMS 7, resolves #69939
+	* Added reference to description field, resolves #70133
 
 2014-05-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
